<resources>
    <string name="app_name">Chron</string>
    <string name="input1_hint">Name</string>
    <string name="input2_hint">Phone</string>
    <string name="input3_hint">Date</string>
    <string name="add_text">Add</string>
    <string name="choose_text">Choose</string>
    <string name="name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="phone_digits">0123456789</string>
    <string name="send_text">Send</string>
    <string name="edit_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="edit_title">Edit Information</string>
    <string name="remove_title">Remove Person?</string>
    <string name="ok_text">Yes</string>
    <string name="channel_name">Chron Notifications</string>
    <string name="channel_description">Birthday Notifications from Chron</string>
</resources>
