<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/date_event"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_title"
        android:textAlignment="center"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:digits="@string/name_digits"
        android:hint="@string/input1_hint"
        android:importantForAutofill="no"
        android:inputType="textCapWords|textPersonName" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameInput"
        android:digits="@string/phone_digits"
        android:ems="10"
        android:hint="@string/input2_hint"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneInput"
        android:focusable="false"
        android:hint="@string/input3_hint"
        android:importantForAutofill="no"
        android:inputType="date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateInput">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:text="@string/cancel_text" />

        <Button
            android:id="@+id/chooseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:text="@string/choose_text" />

        <Button
            android:id="@+id/changeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:text="@string/edit_text" />
    </LinearLayout>
</RelativeLayout>